<resources>
    <string name="app_name">TenantScreening</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="emailtext">Email</string>
    <string name="mobText">Mobile no.</string>
    <string name="pwdtext">Password</string>
    <string name="repwdtext">Re-enter  Password</string>
    <string name="acctext">Create Account</string>
    <string name="aamltext">Already a member?Login</string>
    <string name="logintext">Login</string>
    <string name="signuptext">No account yet?Create one</string>
    <string name="btn_property">Properties</string>
    <string name="btn_tenants">Tenants</string>
    <string name="btn_tincome">Incomes</string>
    <string name="btn_texpense">Expenses</string>
    <string name="btn_logout">Log Out</string>
    <string name="action_settings">Settings</string>
    <string name="plus">+</string>
    <string name="property_name">Property name</string>
    <string name="city">City</string>
    <string name="zip_code">Postal/Zip code</string>
    <string name="country">Country</string>
    <string name="done">Done</string>
    <string name="owner_name">Owner name</string>
    <string name="state">State</string>
    <string name="tenant_name">Tenant name</string>
    <string name="citizenship_number">Citizenship no.</string>
    <string name="rent_amount">Rent amount</string>
    <string name="lsd">Lease start Date</string>
    <string name="movein">Move in date</string>
    <string name="note">NOTE:</string>
    <string name="address_details">Address Details:</string>
    <string name="property_overview">Property overview:</string>
    <string name="tenant_overview">Tenant Overview</string>
    <string name="forgot_your_password">forgot your password?</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_email">Email</string>
    <string name="big_text">Big Text</string>
    <string name="small_text">small text</string>
    <string name="building_type">Building type</string>
    <string name="property_details">Property Details:</string>
    <string name="select_profile">Select Profile</string>
    <string name="edit">edit</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="verify_email">verify email</string>
    <string name="select_the_tenants">Select tenant</string>
    <string name="logout">logout</string>
    <string name="my_information">My information</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="update_account">Update Account</string>
    <string name="delete_account">Delete Account</string>
    <string name="user_details">User details</string>
    <string name="change_user_name_and_password">Change user name and password</string>
    <string name="profile">Profile</string>
    <string name="change_email_and_password">Change Email and Password</string>
    <string name="profile_user">Update user profile</string>
    <string name="save">save</string>
    <string name="citizenship_details">Citizenship Details</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="old_email">Old Email</string>
    <string name="old_password">Old Password</string>
    <string name="new_email">New Email</string>
    <string name="new_password">New Password</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="signup">Sign up</string>
    <string name="property">Property</string>
    <string name="tenant">Tenant</string>
    <string name="select_property">Select Property</string>
    <string name="update_property">Update Property</string>
    <string name="update_tenant">Update Tenant</string>
    <string name="update_profile">Update Profile</string>
    <string name="update_email">Update Email</string>
    <string name="update_password">Update Password</string>
    <string name="mother_name">Mother Name</string>
    <string name="father_name">Father Name</string>
    <string name="sex_male_female">Sex-male/female</string>
    <string name="sex">Sex</string>
    <string name="place_of_birth">Place of birth:</string>
    <string name="district">District</string>
    <string name="municipality">Municipality</string>
    <string name="ward_no">Ward No.</string>
    <string name="marital_status">Marital status</string>
    <string name="move_out_date">Move out date</string>
    <string name="property_no">Property No.</string>
    <string name="zone">Zone</string>
    <string name="property_type">Property type</string>
    <string name="add_property">Add Property</string>
    <string name="add_tenant">Add Tenant</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="google_map_view_of_address">GOOGLE MAP VIEW</string>
    <string name="income_details">Yearly income details</string>
    <string name="amount">Amount</string>
    <string name="tax_rate">Tax Rate</string>
    <string name="total_amount">Total amount</string>
    <string name="calculate_total_amount">Calculate total amount</string>


</resources>
