<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.urgenism.tenantscreening.LoginActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/app_bar" />


    <ScrollView
        android:layout_below="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="vertical"
        android:layout_marginBottom="19dp"
        android:weightSum="1">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@drawable/house" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="@dimen/textappname"
            android:textColor="#000"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp" />

           <EditText android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:layout_marginBottom="7dp"
            android:inputType="textPersonName"
            android:hint="@string/name" />

            <EditText android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="7dp"
                android:inputType="textEmailAddress"
                android:hint="@string/emailtext" />


        <EditText android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:layout_marginBottom="7dp"
            android:inputType="textPostalAddress"
            android:hint="@string/address" />

            <EditText android:id="@+id/sex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="7dp"
                android:inputType="text"
                android:hint="@string/sex_male_female" />

            <EditText android:id="@+id/DOB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="7dp"
                android:inputType="date"
                android:hint="@string/date_of_birth" />

            <EditText android:id="@+id/citizenshipNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="7dp"
                android:inputType="number"
                android:hint="@string/citizenship_number" />

        <EditText android:id="@+id/mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:layout_marginBottom="7dp"
            android:inputType="phone"
            android:hint="@string/mobText" />

            <EditText android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="7dp"
                android:inputType="textPassword"
                android:hint="@string/pwdtext"/>
        </LinearLayout>


        <Button
            style="?android:attr/buttonStyleSmall"
            android:background="#009688"
            android:textColor="#ffffff"
                android:id="@+id/sign_up_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="20dp"
                android:padding="12dp"
            android:textSize="18sp"
                android:text="@string/acctext"/>


        <TextView
            android:id="@+id/sign_in_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/aamltext"
            android:textAllCaps="false"
            android:textSize="15sp" />


    </LinearLayout>


    </ScrollView>



</RelativeLayout>