<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize"
    tools:context="com.example.urgenism.tenantscreening.MyInformationActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="35dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="4dp"
                android:textSize="18sp"
                android:textColor="#000"
                android:text="@string/user_name"/>

            <EditText
                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:inputType="textPersonName"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="4dp"
                android:textSize="18sp"
                android:text="@string/address"/>

            <EditText
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:inputType="textPostalAddress"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="4dp"
                android:textSize="18sp"
                android:textColor="#000"
                android:text="@string/sex"/>

            <EditText
                android:id="@+id/sex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:inputType="text"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="4dp"
                android:textSize="18sp"
                android:textColor="#000"
                android:text="@string/date_of_birth"/>

            <EditText
                android:id="@+id/dateOfBirth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:inputType="date"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="4dp"
                android:textSize="18sp"
                android:textColor="#000"
                android:text="@string/citizenship_number"/>

            <EditText
                android:id="@+id/citizenshipNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:inputType="number"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="4dp"
                android:textSize="18sp"
                android:text="@string/mobText"/>
            <EditText
                android:id="@+id/mobileNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:inputType="number"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="24dp">


                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:background="#009688"
                    android:textColor="#ffffff"
                    android:id="@+id/save"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:padding="20dp"
                    android:textSize="18sp"
                    android:text="@string/save"
                    />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
