<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@drawable/house" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="@dimen/textappname"
            android:textColor="#000"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="vertical">

            <Button
                style="?android:attr/buttonStyleSmall"
                android:background="#4a148c"
                android:textColor="#ffffff"
                android:id="@+id/propertyBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:padding="12dp"
                android:text="@string/property"
                android:textSize="18sp"/>

            <Button
                style="?android:attr/buttonStyleSmall"
                android:background="#4a148c"
                android:textColor="#ffffff"
                android:id="@+id/addPropertyBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:padding="12dp"
                android:text="@string/add_property"
                android:textSize="18sp"/>

            <Button
                style="?android:attr/buttonStyleSmall"
                android:background="#0d47a1"
                android:textColor="#ffffff"
                android:id="@+id/tenantBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:padding="12dp"
                android:text="@string/tenant"
                android:textSize="18sp"/>

            <Button
                style="?android:attr/buttonStyleSmall"
                android:background="#0d47a1"
                android:textColor="#ffffff"
                android:id="@+id/addTenantBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:padding="12dp"
                android:text="@string/add_tenant"
                android:textSize="18sp"/>

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
